force-app/main/default/objects/Tax_Task_Template__mdt/Tax_Task_Template__mdt.object-meta.xml
<CustomObject>
    <label>税務タスクテンプレート</label>
    <pluralLabel>税務タスクテンプレート</pluralLabel>
</CustomObject>