force-app/main/default/objects/Tax_Task_Template__mdt/fields/Days_Before_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Days_Before_Deadline__c</fullName>
    <label>申告期限前日数</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>