force-app/main/default/objects/Tax_Task_Template__mdt/fields/Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type__c</fullName>
    <label>税目</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>法人税</fullName>
            </value>
            <value>
                <fullName>消費税</fullName>
            </value>
            <value>
                <fullName>所得税</fullName>
            </value>
            <value>
                <fullName>相続税</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>